<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.school_profil.SchoolProfilActivity">

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_group_90"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="69dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:layout_marginHorizontal="250dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/ic_group_77" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_logo_school"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            tools:src="@color/logoschool" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/name_school_profil"
            android:layout_width="193dp"
            android:layout_height="22dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/name_school_profil"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/email_school_profil"
            android:layout_width="149dp"
            android:layout_height="15dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/email_school_profil"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/location_school_profil"
            android:layout_width="222dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="120dp"
            android:layout_marginTop="15dp"
            android:text="@string/location_school_profil"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/website_school_profil"
            android:layout_width="222dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="120dp"
            android:layout_marginTop="12dp"
            android:text="@string/website_school_profil"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/phone_school_profil"
            android:layout_width="222dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="120dp"
            android:layout_marginTop="28dp"
            android:text="@string/phone_school_profil"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/emailnonres_school_profil"
            android:layout_width="222dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="120dp"
            android:layout_marginTop="28dp"
            android:text="@string/emailnonres_school_profil"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_changeprofil"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:cropToPadding="false"
            android:src="@drawable/shape_background"
            android:text="@string/changeprofil"
            android:textAllCaps="false"
            android:textSize="14sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_logout"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:backgroundTint="@color/white"
            android:cropToPadding="false"
            android:src="@drawable/shape_background"
            android:text="@string/logout"
            android:textAllCaps="false"
            android:textColor="@color/primary"
            android:textSize="14sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/logo_logout"
        android:layout_marginTop="569dp"
        android:layout_marginLeft="85dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/background"
        app:srcCompat="@drawable/ic_logout"
        tools:ignore="ContentDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>