<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="@drawable/shape_background"
        android:padding="15dp"
        android:layout_marginTop="10dp"
        >

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_avatar_teacher"
            android:layout_marginStart="30dp"
            android:layout_width="51dp"
            android:layout_height="51dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@android:color/darker_gray" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_name_teacher"
            style="@style/tv.large"
            android:layout_marginStart="25dp"
            android:text="@string/name_teacher"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/iv_avatar_teacher"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_status_teacher"
            style="@style/tv.medium"
            android:layout_marginStart="25dp"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toEndOf="@id/iv_avatar_teacher"
            app:layout_constraintTop_toBottomOf="@+id/txt_name_teacher"
            android:text="@string/status_teacher" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_date_teacher"
            style="@style/tv.small"
            android:layout_marginStart="25dp"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toEndOf="@id/iv_avatar_teacher"
            app:layout_constraintTop_toBottomOf="@+id/txt_status_teacher"
            android:text="@string/date_teacher"
            android:src="@drawable/shape_background"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>